--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^26.6.3",
+    "mockdate": "^3.0.2",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
   },
