chore: update start:dev script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:unit": "npm t -- -c jest-unit.config.js",
     "test:integration": "npm t -- -c jest-integration.config.js",
     "test:ci": "npm t -- --coverage",
-    "start:dev": "NODE_ENV=dev nodemon src/main/server.js"
+    "start:dev": "NODE_ENV=dev nodemon -e js src/main/server.js"
   },
   "keywords": [],
   "author": "",
